--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "ros2-interfaces-jazzy"
 version = "0.0.0"
 authors = ["Nisse Knudsen <nisse@make87.com>", "Phillip Thomas <phillip@make87.com>"]
-description = "Messages and Service listed by ROS Index for ROS2 Jazzy"
+description = "Structs for Messages and Services listed by ROS Index for ROS2 Jazzy. Built around the `ros2-client` crate."
 homepage = "https://www.make87.com"
 edition = "2021"
 license = "MIT"
