--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,9 @@ homepage = "https://www.make87.com"
 edition = "2021"
 license = "MIT"
 
+[package.metadata.docs.rs]
+all-features = true
+
 [dependencies]
 serde_with = "3.11.0"
 serde = { version = "1.0.215", features = ["derive"] }
@@ -14,7 +17,7 @@ ros2-client = "0.7.5"
 
 [features]
 default = []
-all = ["ackermann_msgs", "action_msgs", "actionlib_msgs", "actuator_msgs", "apriltag_msgs", "aruco_msgs", "aruco_opencv_msgs", "automotive_navigation_msgs", "automotive_platform_msgs", "autoware_adapi_version_msgs", "autoware_common_msgs", "autoware_control_msgs", "autoware_internal_msgs", "autoware_localization_msgs", "autoware_map_msgs", "autoware_perception_msgs", "autoware_planning_msgs", "autoware_sensing_msgs", "autoware_system_msgs", "autoware_v2x_msgs", "autoware_vehicle_msgs", "bond", "builtin_interfaces", "camera_aravis2_msgs", "can_msgs", "canopen_interfaces", "cartographer_ros_msgs", "cascade_lifecycle_msgs", "composition_interfaces", "control_toolbox", "controller_manager_msgs", "data_tamer_msgs", "dataspeed_can_msgs", "delphi_esr_msgs", "delphi_mrr_msgs", "delphi_srr_msgs", "depthai_ros_msgs", "derived_object_msgs", "diagnostic_msgs", "domain_bridge", "ds_dbw_msgs", "dynamixel_sdk_custom_interfaces", "example_interfaces", "ffmpeg_image_transport_msgs", "find_object_2d", "flexbe_msgs", "flir_camera_msgs", "four_wheel_steering_msgs", "fuse_msgs", "game_controller_spl_interfaces", "gazebo_msgs", "gc_spl_interfaces", "geographic_msgs", "geometry_msgs", "gps_msgs", "graph_msgs", "grasping_msgs", "grbl_msgs", "grid_map_msgs", "ibeo_msgs", "irobot_create_msgs", "kartech_linear_actuator_msgs", "kobuki_ros_interfaces", "leo_msgs", "lgsvl_msgs", "lifecycle_msgs", "logging_demo", "map_msgs", "mapviz_interfaces", "marine_acoustic_msgs", "marine_sensor_msgs", "marti_can_msgs", "marti_common_msgs", "marti_dbw_msgs", "marti_introspection_msgs", "marti_nav_msgs", "marti_perception_msgs", "marti_sensor_msgs", "marti_status_msgs", "marti_visualization_msgs", "mavros_msgs", "micro_ros_diagnostic_msgs", "micro_ros_msgs", "mobileye_560_660_msgs", "mola_msgs", "motion_capture_tracking_interfaces", "moveit_msgs", "mqtt_client_interfaces", "mrpt_msgs", "mrpt_nav_interfaces", "nao_command_msgs", "nao_lola_command_msgs", "nao_lola_sensor_msgs", "nao_sensor_msgs", "nav2_msgs", "nav_msgs", "neobotix_usboard_msgs", "nicla_vision_ros2", "nmea_msgs", "novatel_gps_msgs", "object_recognition_msgs", "octomap_msgs", "pal_statistics_msgs", "pcl_msgs", "pendulum_msgs", "phidgets_msgs", "plansys2_msgs", "plotjuggler_msgs", "point_cloud_interfaces", "polygon_msgs", "ptz_action_server_msgs", "py_trees_ros_interfaces", "radar_msgs", "rc_common_msgs", "rc_reason_msgs", "rcgcd_spl_14", "rcgcrd_spl_4", "rcl_interfaces", "rclpy_message_converter_msgs", "rcss3d_agent_msgs", "realsense2_camera_msgs", "rmf_charger_msgs", "rmf_dispenser_msgs", "rmf_door_msgs", "rmf_fleet_msgs", "rmf_ingestor_msgs", "rmf_lift_msgs", "rmf_obstacle_msgs", "rmf_scheduler_msgs", "rmf_site_map_msgs", "rmf_task_msgs", "rmf_traffic_msgs", "rmf_workcell_msgs", "robot_calibration_msgs", "robot_localization", "ros2_socketcan_msgs", "ros2cli_test_interfaces", "ros_babel_fish_test_msgs", "ros_gz_interfaces", "rosapi_msgs", "rosbag2_interfaces", "rosbag2_test_msgdefs", "rosbridge_msgs", "rosbridge_test_msgs", "rosgraph_msgs", "rosidl_generator_py", "rslidar_msg", "rtabmap_msgs", "rtcm_msgs", "rviz_2d_overlay_msgs", "sbg_driver", "scenario_execution_interfaces", "sensor_msgs", "septentrio_gnss_driver", "service_msgs", "shape_msgs", "sick_safetyscanners2_interfaces", "sick_safevisionary_interfaces", "sick_scan_xd", "smacc2_msgs", "smach_msgs", "soccer_geometry_msgs", "soccer_model_msgs", "soccer_vision_2d_msgs", "soccer_vision_3d_msgs", "soccer_vision_attribute_msgs", "spatio_temporal_voxel_layer", "splsm_7", "statistics_msgs", "std_msgs", "std_srvs", "stereo_msgs", "swri_roscpp", "system_modes_msgs", "test_interface_files", "test_msgs", "tf2_msgs", "theora_image_transport", "topic_tools_interfaces", "trajectory_msgs", "turtlebot3_msgs", "turtlebot4_msgs", "turtlesim", "type_description_interfaces", "ublox_msgs", "ublox_ubx_interfaces", "ublox_ubx_msgs", "udp_msgs", "unique_identifier_msgs", "ur_dashboard_msgs", "ur_msgs", "urg_node_msgs", "usb_cam", "velodyne_msgs", "vision_msgs", "visualization_msgs", "webots_ros2_msgs", "wiimote_msgs", "zbar_ros_interfaces"]
+all = ["ackermann_msgs", "action_msgs", "actionlib_msgs", "actuator_msgs", "apriltag_msgs", "aruco_msgs", "aruco_opencv_msgs", "automotive_navigation_msgs", "automotive_platform_msgs", "autoware_adapi_version_msgs", "autoware_common_msgs", "autoware_control_msgs", "autoware_internal_msgs", "autoware_localization_msgs", "autoware_map_msgs", "autoware_perception_msgs", "autoware_planning_msgs", "autoware_sensing_msgs", "autoware_system_msgs", "autoware_v2x_msgs", "autoware_vehicle_msgs", "bond", "builtin_interfaces", "camera_aravis2_msgs", "can_msgs", "canopen_interfaces", "cartographer_ros_msgs", "cascade_lifecycle_msgs", "composition_interfaces", "control_toolbox", "controller_manager_msgs", "data_tamer_msgs", "dataspeed_can_msgs", "delphi_esr_msgs", "delphi_mrr_msgs", "delphi_srr_msgs", "derived_object_msgs", "diagnostic_msgs", "domain_bridge", "ds_dbw_msgs", "dynamixel_sdk_custom_interfaces", "example_interfaces", "ffmpeg_image_transport_msgs", "find_object_2d", "flexbe_msgs", "flir_camera_msgs", "four_wheel_steering_msgs", "fuse_msgs", "game_controller_spl_interfaces", "gazebo_msgs", "gc_spl_interfaces", "geographic_msgs", "geometry_msgs", "gps_msgs", "graph_msgs", "grasping_msgs", "grbl_msgs", "grid_map_msgs", "ibeo_msgs", "irobot_create_msgs", "kartech_linear_actuator_msgs", "kobuki_ros_interfaces", "leo_msgs", "lgsvl_msgs", "lifecycle_msgs", "logging_demo", "map_msgs", "mapviz_interfaces", "marine_acoustic_msgs", "marine_sensor_msgs", "marti_can_msgs", "marti_common_msgs", "marti_dbw_msgs", "marti_introspection_msgs", "marti_nav_msgs", "marti_perception_msgs", "marti_sensor_msgs", "marti_status_msgs", "marti_visualization_msgs", "mavros_msgs", "micro_ros_diagnostic_msgs", "micro_ros_msgs", "mobileye_560_660_msgs", "mola_msgs", "motion_capture_tracking_interfaces", "moveit_msgs", "mqtt_client_interfaces", "nao_command_msgs", "nao_lola_command_msgs", "nao_lola_sensor_msgs", "nao_sensor_msgs", "nav2_msgs", "nav_msgs", "neobotix_usboard_msgs", "nicla_vision_ros2", "nmea_msgs", "novatel_gps_msgs", "object_recognition_msgs", "octomap_msgs", "pal_statistics_msgs", "pcl_msgs", "pendulum_msgs", "phidgets_msgs", "plansys2_msgs", "plotjuggler_msgs", "point_cloud_interfaces", "polygon_msgs", "ptz_action_server_msgs", "py_trees_ros_interfaces", "radar_msgs", "rc_common_msgs", "rc_reason_msgs", "rcgcd_spl_14", "rcgcrd_spl_4", "rcl_interfaces", "rclpy_message_converter_msgs", "rcss3d_agent_msgs", "realsense2_camera_msgs", "rmf_charger_msgs", "rmf_dispenser_msgs", "rmf_door_msgs", "rmf_fleet_msgs", "rmf_ingestor_msgs", "rmf_lift_msgs", "rmf_obstacle_msgs", "rmf_scheduler_msgs", "rmf_site_map_msgs", "rmf_task_msgs", "rmf_traffic_msgs", "rmf_workcell_msgs", "robot_calibration_msgs", "robot_localization", "ros2_socketcan_msgs", "ros2cli_test_interfaces", "ros_babel_fish_test_msgs", "ros_gz_interfaces", "rosapi_msgs", "rosbag2_interfaces", "rosbridge_msgs", "rosbridge_test_msgs", "rosgraph_msgs", "rosidl_generator_py", "rslidar_msg", "rtabmap_msgs", "rtcm_msgs", "rviz_2d_overlay_msgs", "sbg_driver", "scenario_execution_interfaces", "sensor_msgs", "septentrio_gnss_driver", "service_msgs", "shape_msgs", "sick_safetyscanners2_interfaces", "sick_safevisionary_interfaces", "smacc2_msgs", "smach_msgs", "soccer_geometry_msgs", "soccer_model_msgs", "soccer_vision_2d_msgs", "soccer_vision_3d_msgs", "soccer_vision_attribute_msgs", "spatio_temporal_voxel_layer", "splsm_7", "statistics_msgs", "std_msgs", "std_srvs", "stereo_msgs", "swri_roscpp", "system_modes_msgs", "test_interface_files", "test_msgs", "tf2_msgs", "theora_image_transport", "topic_tools_interfaces", "trajectory_msgs", "turtlebot3_msgs", "turtlebot4_msgs", "turtlesim", "type_description_interfaces", "ublox_msgs", "ublox_ubx_interfaces", "ublox_ubx_msgs", "udp_msgs", "unique_identifier_msgs", "ur_dashboard_msgs", "ur_msgs", "urg_node_msgs", "usb_cam", "velodyne_msgs", "vision_msgs", "visualization_msgs", "webots_ros2_msgs", "wiimote_msgs", "zbar_ros_interfaces"]
 ackermann_msgs = ["std_msgs"]
 action_msgs = ["builtin_interfaces", "unique_identifier_msgs"]
 actionlib_msgs = ["builtin_interfaces", "std_msgs"]
@@ -51,7 +54,7 @@ dataspeed_can_msgs = ["std_msgs"]
 delphi_esr_msgs = ["std_msgs"]
 delphi_mrr_msgs = ["std_msgs"]
 delphi_srr_msgs = ["std_msgs"]
-depthai_ros_msgs = ["geometry_msgs", "sensor_msgs", "std_msgs", "vision_msgs", "visualization_msgs"]
+#depthai_ros_msgs = ["geometry_msgs", "sensor_msgs", "std_msgs", "vision_msgs", "visualization_msgs"]
 derived_object_msgs = ["geometry_msgs", "shape_msgs", "std_msgs"]
 diagnostic_msgs = ["std_msgs"]
 domain_bridge = []
@@ -103,8 +106,8 @@ mola_msgs = ["geometry_msgs"]
 motion_capture_tracking_interfaces = ["geometry_msgs", "std_msgs"]
 moveit_msgs = ["builtin_interfaces", "geometry_msgs", "object_recognition_msgs", "octomap_msgs", "sensor_msgs", "shape_msgs", "std_msgs", "trajectory_msgs"]
 mqtt_client_interfaces = []
-mrpt_msgs = []
-mrpt_nav_interfaces = ["geometry_msgs", "mrpt_msgs", "nav_msgs", "sensor_msgs"]
+#mrpt_msgs = []
+#mrpt_nav_interfaces = ["geometry_msgs", "mrpt_msgs", "nav_msgs", "sensor_msgs"]
 nao_command_msgs = ["std_msgs"]
 nao_lola_command_msgs = ["std_msgs"]
 nao_lola_sensor_msgs = []
@@ -156,7 +159,7 @@ ros_babel_fish_test_msgs = ["builtin_interfaces", "geometry_msgs", "std_msgs"]
 ros_gz_interfaces = ["builtin_interfaces", "geometry_msgs", "rcl_interfaces", "std_msgs"]
 rosapi_msgs = ["builtin_interfaces"]
 rosbag2_interfaces = ["builtin_interfaces"]
-rosbag2_test_msgdefs = []
+#rosbag2_test_msgdefs = []
 rosbridge_msgs = ["builtin_interfaces"]
 rosbridge_test_msgs = ["builtin_interfaces", "geometry_msgs", "std_msgs"]
 rosgraph_msgs = ["builtin_interfaces"]
@@ -173,7 +176,7 @@ service_msgs = ["builtin_interfaces"]
 shape_msgs = ["geometry_msgs"]
 sick_safetyscanners2_interfaces = ["sensor_msgs"]
 sick_safevisionary_interfaces = ["std_msgs"]
-sick_scan_xd = ["geometry_msgs", "sensor_msgs", "std_msgs"]
+#sick_scan_xd = ["geometry_msgs", "sensor_msgs", "std_msgs"]
 smacc2_msgs = ["builtin_interfaces", "std_msgs"]
 smach_msgs = ["std_msgs"]
 soccer_geometry_msgs = ["geometry_msgs"]
