--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -43,11 +43,6 @@ jobs:
       - name: Create required folders
         run: mkdir -p ${{ env.TMP_DIR }}
 
-      - name: Copy required files
-        run: | 
-          cp Cargo.toml ${{ env.TMP_DIR }}/
-          cp README_TEMPLATE.md ${{ env.TMP_DIR }}/README.md
-
       - name: Get ${{ env.DISTRO }} repos
         run: uv run scripts/query_repos.py --distro ${{ env.DISTRO }} --output ${{ env.TMP_DIR }}/list
 
@@ -60,6 +55,12 @@ jobs:
       - name: Convert to rust structs
         run: uv run scripts/convert_to_structs.py ${{ env.TMP_DIR }}/extracted/${{ env.DISTRO }} ${{ env.TMP_DIR }} ${{ env.DISTRO }} ${{ env.VERSION }}
 
+      - name: Set up Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: 1.82.0
+          override: true
+
       - name: Check compilation
         working-directory: ${{ env.TMP_DIR }}
         run: cargo check --all-features
@@ -68,44 +69,27 @@ jobs:
         working-directory: ${{ env.TMP_DIR }}
         run: cargo test --test test_publisher --features std_msgs -- --nocapture
 
-      - name: Checkout or create distro branch
-        run: |
-          git fetch origin ${{ env.DISTRO }} || true
-          git checkout ${{ env.DISTRO }} 2>/dev/null || git checkout -b ${{ env.DISTRO }}
-
-      - name: Copy generated files
-        run: |
-          cp -rf ${{ env.TMP_DIR }}/src .
-          cp -f ${{ env.TMP_DIR }}/Cargo.toml .
-          cp -f ${{ env.TMP_DIR }}/README.md .
-
-      - name: Clean the temp directory
-        run: rm -rf ${{ env.TMP_DIR }}
-
-      - name: Commit and push changes
+      - name: Update distro folder
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add src Cargo.toml README.md
+          cp -rf ${{ env.TMP_DIR }}/src ros2-interfaces-${{ env.DISTRO }}/
+          git add ros2-interfaces-${{ env.DISTRO }}
           if git diff --staged --quiet; then
             echo "No changes to commit"
           else
-            git commit -m "Update generated structs for ${{ env.DISTRO }}: v0.0.${{ env.VERSION }}"
-            git push origin ${{ env.DISTRO }}
+            git commit -m "Update ros2-interfaces-${{ env.DISTRO }} package: v0.0.${{ env.VERSION }}"
+            git push origin main
           fi
-
-      - name: Set up Rust
-        if: github.event_name == 'workflow_dispatch'
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: 1.82.0
-          override: true
-
+          
       - name: Publish to crates.io
         if: github.event_name == 'workflow_dispatch'
         uses: katyo/publish-crates@v2
         with:
           registry-token: ${{ secrets.CARGO_REGISTRY_TOKEN }}
           dry-run: false
-          path: .
+          path: ros2-interfaces-${{ env.DISTRO }}
           args: '--allow-dirty'
+
+      - name: Clean the temp directory
+        run: rm -rf ${{ env.TMP_DIR }}
