--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -26,7 +26,7 @@ jobs:
         distro: ${{ github.event.inputs.distro && fromJSON(format('["{0}"]', github.event.inputs.distro)) || fromJSON('["rolling", "jazzy", "humble", "iron"]') }}
     env:
      TMP_DIR: /tmp/ros2-interfaces
-     DISTRO: ${{ matrix.distro || "rolling" }}
+     DISTRO: ${{ matrix.distro || 'rolling' }}
      VERSION: ${{ github.run_number }}
 
     steps:
