--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -50,19 +50,19 @@ jobs:
 
       - name: Get ${{ env.DISTRO }} repos
         working-directory: scripts
-        run: uv run scripts/query_repos.py --distro ${{ env.DISTRO }} --output ${{ env.TMP_DIR }}/list
+        run: uv run query_repos.py --distro ${{ env.DISTRO }} --output ${{ env.TMP_DIR }}/list
 
       - name: Clone ${{ env.DISTRO }} repos
         working-directory: scripts
-        run: uv run scripts/clone_repos.py --json-file ${{ env.TMP_DIR }}/list --output-dir ${{ env.TMP_DIR }}/cloned
+        run: uv run clone_repos.py --json-file ${{ env.TMP_DIR }}/list --output-dir ${{ env.TMP_DIR }}/cloned
 
       - name: Extract interfaces
         working-directory: scripts
-        run: uv run scripts/extract_interfaces.py --distro ${{ env.DISTRO }} --json-file ${{ env.TMP_DIR }}/list --cloned-dir ${{ env.TMP_DIR }}/cloned --output-dir ${{ env.TMP_DIR }}/extracted
+        run: uv run extract_interfaces.py --distro ${{ env.DISTRO }} --json-file ${{ env.TMP_DIR }}/list --cloned-dir ${{ env.TMP_DIR }}/cloned --output-dir ${{ env.TMP_DIR }}/extracted
 
       - name: Convert to rust structs
         working-directory: scripts
-        run: uv run scripts/convert_to_structs.py ${{ env.TMP_DIR }}/extracted/${{ env.DISTRO }} ${{ env.TMP_DIR }} ${{ env.DISTRO }} ${{ env.VERSION }}
+        run: uv run convert_to_structs.py ${{ env.TMP_DIR }}/extracted/${{ env.DISTRO }} ${{ env.TMP_DIR }} ${{ env.DISTRO }} ${{ env.VERSION }}
 
       - name: Set up Rust
         uses: actions-rs/toolchain@v1
