--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -54,7 +54,7 @@ jobs:
 
       - name: Clone ${{ env.DISTRO }} repos
         working-directory: scripts
-        run: uv run clone_repos.py --json-file ${{ env.TMP_DIR }}/list --output-dir ${{ env.TMP_DIR }}/cloned ${{ github.event_name == 'push' && '--limit 5' || '' }}
+        run: uv run clone_repos.py --json-file ${{ env.TMP_DIR }}/list --output-dir ${{ env.TMP_DIR }}/cloned ${{ github.event_name == 'push' && '--no-deps' || '' }}
 
       - name: Extract interfaces
         working-directory: scripts
