--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -15,6 +15,9 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'scripts/**'
+      - '.github/workflows/pipeline.yml'
 
 jobs:
   pipeline:
